# mojian-story-planner

./: .gitignore  LICENSE  README.md  index.html  mise.toml  package-lock.json  package.json  playwright.config.ts  start-macos.command  start-windows.bat  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  update-star-history.yml
electron/: main.ts  navigationPolicy.ts  preload.ts  runtime.ts  tsconfig.json  tsconfig.preload.json
scripts/: after-extract.mjs  after-pack.mjs  build-electron.mjs  clean-release.mjs  electron-dev.mjs  github-api.mjs  package-electron.mjs  package-mac.mjs  process-tree.mjs  update-star-history.mjs  verify-release-artifacts.mjs  verify-release-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lifecycle.rs  lifecycle_tests.rs  main.rs  storage.rs  storage_tests.rs
src/components/: CharacterMap.tsx  ForeshadowTable.tsx  ProjectOverview.tsx  Sidebar.tsx  StoryBoard.tsx  Timeline.tsx  TopBar.tsx  WelcomeScreen.tsx  WikiPanel.tsx
src/db/: database.ts  storage.test.ts  storage.ts  storageStatus.test.ts  storageStatus.ts
src/store/: useStore.test.ts  useStore.ts  writeQueue.test.ts  writeQueue.ts
src/styles/: global.css
src/test/: smoke.test.ts
src/types/: index.ts
tests/electron/: desktop-packaging.test.ts  load-fallback.test.ts  mac-packaging.test.ts  navigation-policy.test.ts  package-config.test.ts  package-content.test.ts  preload.test.ts  process-tree.test.ts  security.test.ts  (+1 more)
(+8 files in other folders)
