[package]
name = "mojian-story-planner"
version = "0.1.0"
description = "墨笺 · 小说策划台"
authors = ["Starsrift"]
edition = "2021"

[lib]
name = "mojian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mojian-story-planner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.40", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"

[dev-dependencies]
tempfile = "3"
